[tool.poetry]
name = "streamlit-langchain-app"
version = "0.1.0"
description = ""
authors = ["takumines <takumines1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.0"
langchain = "^0.1.12"
openai = "^1.14.0"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.8"
duckduckgo-search = "^5.1.0"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
